--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,6 @@
 
 <h3>Title: <%= @article.title %></h3>
 
-<p><em>Description: </em><%= @article.description %></p>
+<p><strong>Description: </strong><%= @article.description %></p>
 
 <%= link_to "See all articles", articles_path %>
