added ui login page and paths for new create destroy

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,9 @@
 <h1>All Articles</h1>
 
+<div>
+    <%= will_paginate %>
+</div>
+
 <table>
     <tr>
         <td>Title</td>
@@ -23,5 +27,9 @@
     </tr>
 
 </table>
+
+<div>
+    <%= will_paginate %>
+</div>
 
 <%= link_to "Create a new Article", new_article_path %>
