--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,10 @@
 <ul>
     <li><%= link_to 'Home', root_path %></li>
     <li><%= link_to 'About', about_path %></li>
+    <% if logged_in? %>
     <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+    <% else %>
+    <li><%= link_to 'Login', login_path %></li>
+    <li><%= link_to 'Sign up', signup_path %></li>
+    <% end %>
 </ul>
