--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,5 +12,10 @@
 <h3>Title: <%= @article.title %></h3>
 
 <p><strong>Description: </strong><%= @article.description %></p>
-
-<%= link_to "See all articles", articles_path %>
+<ul>
+    <li><%= link_to "See all articles", articles_path %></li>
+    <% if logged_in? && current_user == @article.user %>
+    <li><%= link_to 'edit article', edit_article_path(@article) %></li>
+    <li><%= link_to 'delete article', article_path(@article), method: :delete, data: {confirm: "are you sure"}%></li>
+    <% end %>
+</ul>
