--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,7 +21,7 @@
             Updated: <%= time_ago_in_words(article.updated_at) %>
         </td>
         <td><%= link_to 'show', article_path(article) %></td>
-        <% if logged_in?  && current_user == article.user %>
+        <% if logged_in?  && (current_user == article.user || current_user.admin? )%>
         <td><%= link_to 'edit', edit_article_path(article) %></td>
         <td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure"} %></td>
         <% end %> 
