--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,11 @@
 <ul>
     <li><%= link_to user.username, user_path(user) %></li>
     <li><%= pluralize(user.articles.count, "article") if user.articles %></li>
+    <% if logged_in? and current_user.try(:admin?) %>
+    <li><%= link_to "Delete", user_path(user), method: :delete,
+        data: {confirm: "proceeding will delete user and all articles"}
+     %></li>
+    <%end%>
 </ul>
 
 <%end%>
