--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,13 +1,61 @@
-<ul>
-    <li><%= link_to 'Home', root_path %></li>
-    <li><%= link_to 'About', about_path %></li>
-    <% if logged_in? %>
-    <li><%= link_to 'Logout', logout_path, method: :delete %></li>
-    <% else %>
-    <li><%= link_to 'Login', login_path %></li>
-    <li><%= link_to 'Sign up', signup_path %></li>
-    <% end %>
-</ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "Alpha Blog", root_path, class: "navbar-brand", id: "logo" %>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Articles", articles_path %></li>
+        <% if logged_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Create Article", new_article_path %></li>
+            <li><%= link_to "User Page", user_path(current_user.id) %></li>
+            <li><%= link_to "Articles", articles_path %></li>
+          </ul>
+        </li>
+        <% end %>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      
+      <ul class="nav navbar-nav navbar-right">
+       <% if logged_in? %>
+        <li><%= link_to "Logout", logout_path, method: :delete %></li>
+       <% else %>
+       <li><%= link_to "Sign Up!", signup_path %></li>
+       <li><%= link_to "Login", login_path %></li>
+       <% end %> 
+       <% if logged_in? %> 
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Edit User", edit_user_path(current_user.id) %></li>
+            <li><%= link_to "User Page", user_path(current_user.id) %></li>
+            <li><%= link_to "All Users", users_path %></li>
+          </ul>
+        </li>
+        <% end %>
+      </ul>
+      
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 <% if current_user.try(:admin?) %>
 <h5>Admin</h5>
 <%end%>
