--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,13 @@
-<h1>About Page!</h1>
+
+<div class="media">
+  <div class="media-left media-middle">
+      <img class="media-object" src="http://www.fillmurray.com/500/300" alt="Fill Murray">
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">About Us</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo rem hic magnam possimus nam non, omnis, sapiente earum accusantium molestiae aperiam adipisci quasi quo modi obcaecati accusamus praesentium animi vel.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore rerum nam vitae, repellendus, maiores voluptas sed veniam recusandae quia natus doloribus animi nemo magni provident esse amet est ad ratione.</p>
+    <h4>A Fun fact!</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis modi quis alias nisi ipsa blanditiis culpa odit odio architecto tenetur animi sequi obcaecati, harum fugiat. Voluptatibus culpa optio maxime.</p>
+  </div>
+</div>
