--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -14,11 +14,29 @@
 
 
 <%= form_for @article do |f| %>
-    <p><%=  f.label :title %></p>
-    <p><%= f.text_field :title %></p>
-    <p><%=  f.label :description %></p>
-    <p><%= f.text_area :description %></p>
-    <%= f.submit %>
+    <div class="form-group">
+        <div class="control-label col-md-2">
+        <%=  f.label :title %>:
+        </div>
+        <div class="col-md-10">
+        <%= f.text_field :title, class: "form-control", autofocus: true %>
+        </div>
+    </div>
+    
+     <div class="form-group">
+        <div class="control-label col-md-2">
+        <%=  f.label :description %>:
+        </div>
+        <div class="col-md-10">
+        <%= f.text_area :description, class: "form-control", rows: 5 %>
+        </div>
+    </div>
+    <div class="form-group">
+          <%= f.submit class: "btn btn-primary btn-lrg" %>
+    </div>
+  
+
 <%end%>
 
-<%= link_to "See all articles", articles_path %>
+<%= link_to "See all articles", articles_path, class: "btn btn-lrg btn-default" %>
+
