--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,29 +1,60 @@
 <h1>Create an article</h1>
-
 <% if @article.errors.any? %>
-
-<h2>This action was prevented by the following errors</h2>
-
-    <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-    </ul>
+<div class="row">
+    <div class="col-md-6 col-offset-2">
+        <div class="panel panel-danger">
+            <div class="panel-heading">
+            <h2 class="panel-title">
+            <%= pluralize(@article.errors.count, "Error") %>
+            prevent this action from being taken
+            </h2>
+            </div>
+            <div class="panel-body panel-danger">
+                <ul>
+                    <% @article.errors.full_messages.each do |msg| %>
+                    <li><%= msg %></li>
+                    <% end %>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 <% end %>
+<hr>
 
 
-
-
-<%= form_for @article do |f| %>
-
-<p><%= f.label :title %>:</p>
-<p><%= f.text_field :title %></p>
-<p><%= f.label :description %>:</p>
-<p><%= f.text_area :description %></p>
-
-<%= f.submit %>
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form" }) do |f| %>
+    <div class="form-group">
+        <div class="control-label col-md-2">
+        <%=  f.label :title %>
+        </div>
+        <div class="col-md-8">
+        <%= f.text_field :title, class: "form-control", 
+        autofocus: true,
+        placeholder: "Enter Title" %>
+        </div>
+    </div>
+    
+     <div class="form-group">
+        <div class="control-label col-md-2">
+        <%=  f.label :description %>
+        </div>
+        <div class="col-md-8">
+        <%= f.text_area :description, class: "form-control",
+        rows: 5,
+        placeholder: "Enter Description" %>
+        </div>
+    </div>
+    <div class="form-group">
+          <%= f.submit class: "btn btn-primary btn-lrg" %>
+    </div>
+  
 
 <%end%>
 
-<%= link_to "See all articles", articles_path %>
+
+
+<%= link_to "See all articles", articles_path, class: "btn btn-lrg btn-default" %>
+<br>
+[<%= link_to "Cancel Article", articles_path %> ]
