--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,15 +2,17 @@
 
 <h3><%= @user.username %>'s articles</h3>
 
-<table>
+<table class="table table-striped table-hover">
+   <thead>
     <tr>
         <td>Title</td>
         <td>Description</td>
-        <td>details</td>
-        <td>edit</td>
-        <td>show</td>
-        <td>delete</td>
+        <td>Details</td>
+        <td>Edit</td>
+        <td>Show</td>
+        <td>Delete</td>
     </tr>
+    </thead> 
     <% @user.articles.each do |article| %>
     <tr>
         <td><%= article.title %></td>
@@ -18,9 +20,11 @@
         <td>By <%= article.user.username if article.user %>  <%= time_ago_in_words(article.created_at) %> ago,
             Updated: <%= time_ago_in_words(article.updated_at) %>
         </td>
-        <td><%= link_to 'edit', edit_article_path(article) %></td>
-        <td><%= link_to 'show', article_path(article) %></td>
-        <td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure"} %></td>
+        <td><%= link_to 'show', article_path(article), class: "btn btn-sml btn-default" %></td>
+        <td><%= link_to 'edit', edit_article_path(article), class: "btn btn-sml btn-warning" %></td>
+        <td><%= link_to 'delete', article_path(article), method: :delete,
+         data: {confirm: "Are you sure"},
+         class: "btn btn-sml btn-danger" %></td>
     <% end %>    
     </tr>
 
