--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,17 +5,20 @@
 </div>
 
 <table class="table table-striped table-hover">
+   <% @articles.each do |article| %>
    <thead>
     <tr>
         <td>Title</td>
         <td>Description</td>
         <td>Details</td>
         <td>Show</td>
+        <%if logged_in? && (current_user == article.user || current_user.admin? ) %>
         <td>Edit</td>
         <td>Delete</td>
+        <%end%>
     </tr>
    </thead>
-    <% @articles.each do |article| %>
+ 
     <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
