--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,18 +3,31 @@
     <%= will_paginate %>
 </div>
 <h1>Bloggers List</h1>
-<% @users.each do |user| %>
-<ul>
-    <li><%= link_to user.username, user_path(user) %></li>
-    <li><%= pluralize(user.articles.count, "article") if user.articles %></li>
-    <% if logged_in? and current_user.try(:admin?) %>
-    <li><%= link_to "Delete", user_path(user), method: :delete,
-        data: {confirm: "proceeding will delete user and all articles"}
-     %></li>
-    <%end%>
-</ul>
 
-<%end%>
+  <table class="table table-hover table-striped">
+    <thead>
+      <tr>
+        <td>Username</td>
+        <td>Articles</td>
+        <% if current_user.try(:admin?) %>
+        <td>Delete</td>
+        <% end %>
+      </tr>
+     </thead> 
+  <% @users.each do |user| %>   
+      <tr>
+        <td><%= link_to user.username, user_path(user) %></td>
+        <td><%= pluralize(user.articles.count, "article") if user.articles %></td>
+        <% if current_user.try(:admin?) %>
+        <td><%= link_to "Delete", user_path(user), method: :delete,
+        data: {confirm: "proceeding will delete user and all articles"}, 
+        class: "btn btn-sml btn-danger" %></td>
+        <% end %>
+      </tr>
+  <%end%>    
+  </table>
+
+
 
 <div>
     <%= will_paginate %>
