tweek user login and signup

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Log in!</h1>
+<h1>Sign up!</h1>
 
 <%= form_for @user do |f| %>
 
@@ -22,7 +22,7 @@
     <%= f.password_field :password, class: "form-control"%>
 </div>
 
-<%= f.submit "Log in!", class: "btn btn-lrg btn-primary" %>
+<%= f.submit "Sign up!", class: "btn btn-lrg btn-primary" %>
 
 <%end%>
 <br>
